Adds HTML output, removes specs2 index hack
The hack doesn't work anymore for some reason, removing it.